curl.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: curl
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: curl
    spec:
      containers:
      - name: curl
        image: appropriate/curl
        command: ['sleep', '1d']
