deployment_beta.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: echodeploy
  labels:
    app: echo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echopod
        image: lbernail/echo:0.5
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /alive
            port: 5000
        readinessProbe:
          httpGet:
            path: /ready
            port: 5000
