pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: echodeploy
spec:
  containers:
  - name: echopod
    image: lbernail/echo:0.5
