ipvs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echodeploy
  labels:
    app: echo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echopod
        image: lbernail/echo:0.5
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
spec:
  type: ClusterIP
  selector:
    app: echo
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000
