istio_demo.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: echov1
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: echo
        version: v1
    spec:
      containers:
      - name: echopod
        image: lbernail/echo:0.5
        imagePullPolicy: Always
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: echov2
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: echo
        version: v2
    spec:
      containers:
      - name: echopod
        image: lbernail/echo:0.5
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
spec:
  ports:
  - port: 80
    name: http
    targetPort: 5000
  selector:
    app: echo
