service-lb-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: echo
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000
