service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
#  loadBalancerSourceRanges:
#- 10.0.0.0/8
  selector:
    app: echo
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000
