service-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
spec:
  type: NodePort
  selector:
    app: echo
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000
