echov2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echodeployv2
  labels:
    app: echov2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echov2
  template:
    metadata:
      labels:
        app: echov2
    spec:
      containers:
      - name: echopodv2
        image: lbernail/echo:0.5
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /alive
            port: 5000
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 2
        readinessProbe:
          httpGet:
            path: /ready
            port: 5000
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 2

---
apiVersion: v1
kind: Service
metadata:
  name: echov2
  labels:
    app: echov2
spec:
  type: ClusterIP
  selector:
    app: echov2
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echov2
spec:
  rules:
  - host: echov2.datadog.test
    http:
      paths:
      -  backend:
          serviceName: echov2
          servicePort: 80
