istio_canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo
spec:
  hosts:
  - echo
  http:
  - match:
    - headers:
        canary:
          exact: "v2"
    route:
    - destination:
        host: echo
        subset: v2
  - route:
    - destination:
        host: echo
        subset: v1
 
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: echo
spec:
  host: echo
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
